[backend] feat: 자기공감 2,3페이지 API 구현

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -11,3 +11,12 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+
+#openai
+openai.api.key=
+
+# application.properties
+server.servlet.encoding.charset=UTF-8
+server.servlet.encoding.force=true
+logging.charset.console=UTF-8
+logging.charset.file=UTF-8
