GPT 세번째 질문 구현

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -13,7 +13,7 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
 #openai
-openai.api.key=
+openai.api.key=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
 
 # application.properties
 server.servlet.encoding.charset=UTF-8
