--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,8 +11,7 @@
   "dependencies": {
     "next": "^15.3.2",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "recoil": "^0.7.7"
+    "react-dom": "^19.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
