openai api key 환경변수 설정, 3번 질문 코드 리팩토링, 2번 질문 코드 추가 리팩토링

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -13,7 +13,7 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
 #openai
-openai.api.key=
+openai.api.key=${OPENAI_API_KEY}
 
 # application.properties
 server.servlet.encoding.charset=UTF-8
