--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -2,9 +2,9 @@ spring.application.name=backend
 
 # mysql DB
 spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
-spring.datasource.url=${LOCAL_DB_URL}
-spring.datasource.username=${LOCAL_DB_USERNAME}
-spring.datasource.password=${LOCAL_DB_PASSWORD}
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 spring.jpa.hibernate.ddl-auto=update
 
 #jpa
